# BlankProject

./: Test.project
Cooking/Windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Cooking/Windows/DX9/: BF-fx.bf  BF-fxh.bf  BF-textures-tga.bf
Cooking/Windows/DX9/Resources/Shaders/: AmbientOcclusion.fxb  AmbientOcclusion.fxb_debug  AmbientOcclusionPS3.fxb  AmbientOcclusionPS3.fxb_debug  Blur.fxb  Blur.fxb_debug  Bump_highlight.fxb  Bump_highlight.fxb_debug  Collision.fxb  Collision.fxb_debug  DiffuseColorSolid.fxb  DiffuseColorSolid.fxb_debug  DiffuseColorWire_NoZTest.fxb_debug  Distort.fxb  Distort.fxb_debug  FXAA.fxb  FXAA.fxb_debug  Fonts.fxb  Fonts.fxb_debug  LightPrePass.fxb  LightPrePass.fxb_debug  NormalDepthPass.fxb  NormalDepthPass.fxb_debug  PS3_Simple.fxb  PS3_Simple.fxb_debug  RadialBlur.fxb  RadialBlur.fxb_debug  (+75 more)
Cooking/Windows/Finale/DX9/: BF-fx.bf  BF-fxh.bf  BF-textures-tga.bf
Cooking/Windows/Windows_Dx9_Steam/DX9/: BF-fx.bf  BF-textures-tga.bf
Cooking/Windows/src/Extension/: Extension.vcxproj  Extension.vcxproj.filters
Cooking/Windows/src/Game/: BuildSAAS.vcxproj  BuildSAAS.vcxproj.filters  Game.vcxproj  Game.vcxproj.filters
Cooking/Windows/src/Plugins/: cmake_install.cmake
Cooking/Windows/tmp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Project/: CMakeLists.txt
Project/CMake/Modules/: FindShSDK.cmake
Project/src/Game/: CMakeLists.txt  Game.cpp  Game.h
Project/src/Plugins/Plugin/: Plugin.cpp
(+87 files in other folders)
